# micro-tower

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
codegen/: Cargo.toml
codegen-macros/: Cargo.toml
codegen-macros/src/: lib.rs
codegen/src/: lib.rs  manifest.rs  service.rs  util.rs
codegen/src/service/: args.rs  decl.rs  items.rs  signature.rs
codegen/src/util/: diagnostic.rs
codegen/tests/: service.rs
core/: Cargo.toml
core/src/: lib.rs  service.rs
examples/: advanced_services.rs  r2d2.rs  service.rs  simple_service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  manifest.rs
src/: api.rs  builder.rs  connection.rs  lib.rs  manifest.rs  r2d2.rs  runtime.rs  service.rs  session.rs  shutdown.rs  tcp.rs  util.rs  utils.rs
src/api/: codec.rs  layer.rs  service.rs
src/api/codec/: json.rs
src/layer/: future.rs
src/runtime/: builder.rs  registry.rs
src/service/: error.rs  map_error.rs  pool.rs
src/session/: stream.rs  tcp.rs
src/util/: borrow.rs
tests/: api.rs  pool.rs  service.rs  service_codegen.rs  stream.rs
