[package]
name = "micro-tower"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"codegen",
]

[dependencies]
bytes = "~1.2.1"
derive_builder = "~0.11.2"
tracing = "~0.1.36"

[dependencies.tracing-subscriber]
version = "~0.3.15"
features = ["std", "fmt"]

[dependencies.tokio]
version = "~1.21.0"
features = ["full"]

[dependencies.tower]
version = "~0.4.13"
features = ["full"]

[dependencies.micro-tower-codegen]
path = "codegen/"
