[package]
name = "micro-tower"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"codegen",
]

[dependencies]
bytes = "~1.2.1"
derive_builder = "~0.11.2"
futures = "~0.3.24"
serde_json = "~1.0.85"
thiserror = "~1.0.34"
tracing = "~0.1.36"

[dependencies.serde]
version = "~1.0.144"
features = ["derive"]

[dependencies.tokio]
version = "~1.21.0"
features = ["full"]

[dependencies.tower]
version = "~0.4.13"
features = ["full"]

[dependencies.micro-tower-codegen]
path = "codegen/"

[dev-dependencies]
tracing-subscriber = "~0.3.15"
